Implement AffectCVSS API
