# osidb/models.py
@@ -1991,9 +1991,7 @@ class AffectCVSSManager(ACLMixinManager, TrackingMixinManager):
             )
 
 
-# once API for AffectCVSS is done, CVSS should inherit also from BugzillaSyncMixin,
-# and FlawCVSS with AffectCVSS should inherit from CVSS class only
-class CVSS(ACLMixin, TrackingMixin):
+class CVSS(ACLMixin, BugzillaSyncMixin, TrackingMixin):
     class CVSSVersion(models.TextChoices):
         VERSION2 = "V2", "version 2"
         VERSION3 = "V3", "version 3"
@@ -2057,7 +2055,7 @@ class CVSS(ACLMixin, TrackingMixin):
         abstract = True
 
 
-class FlawCVSS(BugzillaSyncMixin, CVSS):
+class FlawCVSS(CVSS):
     flaw = models.ForeignKey(
         Flaw, on_delete=models.CASCADE, blank=True, related_name="cvss_scores"
     )
@@ -2080,7 +2078,7 @@ class FlawCVSS(BugzillaSyncMixin, CVSS):
         self.flaw.save(*args, bz_api_key=bz_api_key, **kwargs)
 
 
-class AffectCVSS(AlertMixin, CVSS):
+class AffectCVSS(CVSS):
     affect = models.ForeignKey(
         Affect, on_delete=models.CASCADE, blank=True, related_name="cvss_scores"
     )
@@ -2093,6 +2091,14 @@ class AffectCVSS(AlertMixin, CVSS):
                 fields=["affect", "version", "issuer"], name="unique CVSS of an Affect"
             ),
         ]
+
+    def bzsync(self, *args, bz_api_key, **kwargs):
+        """
+        Bugzilla sync of the AffectCVSS instance
+        """
+        self.save()
+        # AffectCVSS needs to be synced through affect
+        self.affect.save(*args, bz_api_key=bz_api_key, **kwargs)
 
 
 class TrackerManager(ACLMixinManager, TrackingMixinManager):
